fix spacing

--- a/sass/components/admin-search-api.scss
+++ b/sass/components/admin-search-api.scss
@@ -10,7 +10,7 @@
 .block-facets {
   display: inline-block; /* 1 */
 
-  > .form-item {
+  .form-item:first-of-type {
     padding-right: 0.5em; /* 1 */
   }
 
